functions added to choose character, enemies, defender. Created objects for characters to store HP, attack, counter attack. Haven't worked out positioning of character logic or attack button logic yet.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,13 @@ body{
     padding: 0%;
 }
 
+.characterText{
+    font-family: fantasy;
+    color: black;
+    font-size: small;
+    padding: 2px;
+    text-align: center;
+    }
 
 #characterText{
     font-family: fantasy;
