characters move where they should but there are still some edge cases, attack button knows which is your character and the defender and their object properties. Win Loose part of it doesn't work yet, maybe should be a function that is passed in? still needs css to change based on section character is in. Need to fix edge cases if divs are empty.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,25 +28,27 @@ body{
     text-align: center;
 }
 
-.neutral-character-background.defender-character-background{
+/* .neutral-character-background.defender-character-background{
     background-color: black;
     border: solid 2px green;
-    } 
+    }  */
 
-.neutral-character-background.enemy-character-background{
+/* .neutral-character-background.enemy-character-background{
     background-color: red;
     border: solid 2px black;
-    }    
+    }     */
 
-/* .enemy-character-background{
+.enemy-character-background{
     background-color: red;
     border: solid 2px black;
-}     */
+}    
 
 .neutral-character-background{
     background-color: white;
     border: solid 2px green;
     }
+
+
 
 .gandalfHP{
     text-align: center;
@@ -131,5 +133,18 @@ body{
     text-align: center;
     font-size: x-large;
     margin: 20px;
+}
+#your-character-fight-stats{
+    font-family: fantasy;
+    color: black;
+    padding: 5px;
+    
+}
+
+#defender-character-fight-stats{
+    font-family: fantasy;
+    color: black;
+    padding: 5px;
+    
 }
 
